--- a/viz_2/index2.html
+++ b/viz_2/index2.html
@@ -1,40 +1,16 @@
-const mapaFetch = d3.json('barrios-caba.geojson')
-const dataFetch = d3.dsv(';', '147_vehiculos_mal_estacionados.csv', d3.autoType)
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mapa de ratas en CABA</title>
+  </head>
+  <body>
+    <div id="chart"></div>
 
-Promise.all([mapaFetch, dataFetch]).then(([barrios, data]) => {
-  
-  /* Agrupamos reclamos x barrio */
-  const reclamosPorBarrio = d3.group(data, d => d.domicilio_barrio) // crea un Map
-  console.log('reclamosPorBarrio', reclamosPorBarrio)
-  
-  /* Mapa Coroplético */
-  let chartMap = Plot.plot({
-    // https://github.com/observablehq/plot#projection-options
-    projection: {
-      type: 'mercator',
-      domain: barrios, // Objeto GeoJson a encuadrar
-    },
-    color: {
-      // Quantize continuo (cant. denuncias) -> discreto (cant. colores)
-      type: 'quantize', 
-      n: 10,
-      scheme: 'ylorbr',
-      label: 'Cantidad de denuncias',
-      legend: true,
-    },
-    marks: [
-      Plot.geo(barrios, {
-        fill: d => {
-          let nombreBarrio = d.properties.BARRIO
-          let cantReclamos = reclamosPorBarrio.get(nombreBarrio).length
-          return cantReclamos
-        },
-        stroke: '#ccc',
-        title: d => `${d.properties.BARRIO}\n${d.properties.DENUNCIAS} denuncias`,
-      }),
-    ],
-  })
-
-  /* Agregamos al DOM la visualización chartMap */
-  d3.select('#chart').append(() => chartMap)
-})
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
