--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       p#nombre {
-        font-family: myFirstFont;
+        font-family: font_title;
         text-align: center;
         font-size: 50px;
         color: rgb(0, 0, 0);
@@ -36,14 +36,18 @@
         margin-top: -20px;
       }
       p#click {
-        font-family: nyt-cheltenham;
+        font-family: font_body;
         font-size: 30px;
         color: rgb(0, 0, 0);
       }
 
       @font-face {
-      font-family: myFirstFont;
+      font-family: font_title;
       src: url('Ancient Medium.ttf');
+    }
+      @font-face {
+      font-family: font_body;
+      src: url('Cheltenham BT.ttf');
     }
       
         </style>
