--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 
       @font-face {
       font-family: font_title;
-      src: url('Ancient Medium.ttf');
+      src: url('/tipografias/Ancient Medium.ttf');
     }
       @font-face {
       font-family: font_body;
-      src: url('Cheltenham BT.ttf');
+      src: url('/tipografias/Cheltenham BT.ttf');
     }
       @font-face {
       font-family: font_italic;
-      src: url('Cheltenhm BT Italic.ttf');
+      src: url('/tipografias/Cheltenhm BT Italic.ttf');
     }
       @font-face {
       font-family: font_bold_italic;
-      src: url('Cheltenham Bold Italic Headline BT.ttf');
+      src: url('/tipografias/Cheltenham Bold Italic Headline BT.ttf');
     }
      
     
