chart 1 agregue texto

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
   <body>
 
-    <!--
-    <link href="https://www.dafontfree.net/embed/Y2hlbHRlbmhtLWJ0LWJvbGQtaXRhbGljJmRhdGEvMjMvYy8xMTgyNTcvQ2hlbHRlbmhhbUJvbGRJdGFsaWNCVC50dGY" rel="stylesheet" type="text/css"/>
-    -->
     <div class = "box">
       <p id="clima">⛅ 15.7º</id> 
       <p id="fecha">Martes, 25 de Abril de 2023</id> 
@@ -47,9 +44,9 @@
     
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
-    <script src="/scripts/chart_1.js"></script>
-    <script src="/scripts/chart_2.js"></script>
-    <script src="/scripts/chart_3.js"></script>
+    <script src="./scripts/chart_1.js"></script>
+    <script src="./scripts/chart_2.js"></script>
+    <script src="./scripts/chart_3.js"></script>
    
   </body>
 </html>
