--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </p>
     <br>
     <p class = 'cuerpo'>Siguiendo el profundo análisis de la problemática, también se estudió 
-      cuáles son los canales ofrecidos por el gobierno que los porteños más utilizan a la hora de realizar
-      los reclamos por vehículos mal estacionados. Con esta información, se tiene el objetivo de poner 
+      cuáles fueron los canales ofrecidos por el gobierno que los porteños más utilizaron a la hora de realizar
+      los reclamos por vehículos mal estacionados en el mes de enero. Con esta información, se tiene el objetivo de poner 
       foco en la <a class = 'cuerpo_negrita'>optimización</a> de éstos.
     </p>
 
