--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class = "box">
       <p id="clima">⛅ 15.7º</id> 
-      <p id="fecha">Martes, 25 de Julio de 2022</id> 
+      <p id="fecha">Martes, 25 de Julio de 2021</id> 
       <p id="nombre">The BA Times</id> 
     </div>
 
@@ -55,22 +55,22 @@
     
 
     <br><br><br><br>
-    <p class = 'subtitulo'>Barrios más afectados</p>
-    <p id = 'leyenda'>Cantidad de denuncias por autos mal estacionados</p>
+    <p class = 'subtitulo'>Barrios más afectados en junio</p>
+    <p id = 'leyenda'>Cantidad de reclamos por autos mal estacionados</p>
     <div id = "chart_2"></div>
-    <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados. Como es de imaginarse, los
+    <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados, ya que como es de imaginarse, los
       barrios más concurridos como lo son: <a class = 'cuerpo_negrita'>Palermo, Villa Urquiza y Caballito</a>, son los que revelaron
       un mayor índice de reclamos a la lína de denuncias 147, en comparación al resto.
     </p>
     <br>
     <p class = 'cuerpo'>Siguiendo el profundo análisis de la problemática, también se estudió 
       cuáles fueron los canales ofrecidos por el gobierno que los porteños más utilizaron a la hora de realizar
-      los reclamos por vehículos mal estacionados en el mes de enero. Con esta información, se tiene el objetivo de poner 
+      los reclamos por vehículos mal estacionados en el mes de junio. Con esta información, se tiene el objetivo de poner 
       foco en la <a class = 'cuerpo_negrita'>optimización</a> de éstos.
     </p>
 
     <br><br><br><br>
-    <p class = 'subtitulo'>Canales más utilizados y su eficiencia</p>
+    <p class = 'subtitulo'>Canales de denuncia más utilizados en junio</p>
     <div id = "chart_3"></div>
     <p class = 'pregunta'>  ¿A qué se debe la notable preferencia por el uso de la App Denuncia Vial?</p>
     <p class = 'cuerpo'>Mediante esta aplicación móvil, los vecinos pueden denunciar infracciones de tránsito 
@@ -89,10 +89,11 @@
     <br><br><br><br>
     <p class = 'subtitulo'>Conclusión</p>
     <br><br>
-    <p id = 'cuerpo_final'>Final</p>
+    <p id = 'cuerpo_final'>*escribir final*</p>
 
     <div class = 'box'>
       <br>
+      <p id="nombre_mini">The BA Times</id> 
       <p class = 'abajo'>Datos basados en contactos al SUACI (Sistema Único de Atención Ciudadana) de la Ciudad de Buenos Aires</p>
       <p class = 'abajo'>por Valentina Fuchs & Milagros Rodriguez Ventura</p>
       <br>
