--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <p id = 'leyenda'>Cantidad de reclamos por autos mal estacionados</p>
     <div id = "chart_2"></div>
     <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados, ya que como es de imaginarse, los
-      barrios más concurridos como lo son: <a class = 'cuerpo_negrita'>Palermo, Villa Urquiza y Caballito</a>, son los que revelaron
+      barrios más concurridos como lo son: <a class = 'cuerpo_negrita'>Palermo y Belgrano</a>, son los que revelaron
       un mayor índice de reclamos a la lína de denuncias 147, en comparación al resto.
     </p>
     <br>
