--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
     <br>
     <p class = 'subtitulo'>Llueven denuncias por vehículos mal estacionados</p>
     <p class = 'cuerpo'>En el último mes de Junio, las líneas de reclamo de la Ciudad de Buenos Aires 
-      han colapsado por denuncias ante la inmensa cantidad de vehículos mal estacionados. Es por esto que el gobierno
+    han colapsado por denuncias ante la inmensa cantidad de vehículos mal estacionados. Es por esto que el gobierno
     empieza a evaluar alternativas, considerando el malestar manifestado por los vecinos y conductores. Entre las 
     soluciones propuestas, se habló de la posibilidad de un cambio en las normas de estacionamiento en las vías públicas,
     permitiendo estacionar en ambas manos en algunas calles, para otorgar mayor accesibilidad para los conductores.  
-    
     </p>
-
     <br>
+    <p class = 'subtitulo'>Linea 147 y los reclamos más populares en junio</p>
+    <p class = 'cuerpo'>Ante la masiva cantidad de denuncias por vehiculos mal estacionados, se realizo un relevamiento para estudiar
+    cuales son los reclamos mas recurrentes recibidos por la Linea 147, para asi orientar las nuevas de manera optima y eficiente, tratando
+    de mitigar el malestar de los ciudadanos.  </p>
+
     <div id = "chart_1"></div>
     <p class = 'cuerpo'>En comparación con el resto de las problemáticas, podemos ver que el
       estacionamiento en las calles bonaerenses aquiere protagonismo, lo que radica en una cantidad masiva de reclamos
@@ -60,7 +63,7 @@
     <div id = "chart_2"></div>
     <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados, ya que como es de imaginarse, los
       barrios más concurridos como lo son: <a class = 'cuerpo_negrita'>Palermo y Belgrano</a>, son los que revelaron
-      un mayor índice de reclamos a la lína de denuncias 147, en comparación al resto.
+      un mayor índice de reclamos a la línea de denuncias 147, en comparación al resto.
     </p>
     <br>
     <p class = 'cuerpo'>Siguiendo el profundo análisis de la problemática, también se estudió 
