--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
     soluciones propuestas, se habló de la posibilidad de un cambio en las normas de estacionamiento en las vías públicas,
     permitiendo estacionar en ambas manos en algunas calles, para otorgar mayor accesibilidad para los conductores.  
     </p>
+    
+    <p class = 'cuerpo'>Ante la masiva cantidad de denuncias por vehículos mal estacionados, se realizó un relevamiento para estudiar
+      cuáles son los reclamos más recurrentes recibidos por la Línea 147, para así orientar las políticas públicas de manera óptima y eficiente, 
+      con el fin de mitigar el malestar de los ciudadanos.  </p>
     <br>
-    <p class = 'subtitulo'>Linea 147 y los reclamos más populares en junio</p>
-    <p class = 'cuerpo'>Ante la masiva cantidad de denuncias por vehiculos mal estacionados, se realizo un relevamiento para estudiar
-    cuales son los reclamos mas recurrentes recibidos por la Linea 147, para asi orientar las nuevas de manera optima y eficiente, tratando
-    de mitigar el malestar de los ciudadanos.  </p>
-
+    <p class = 'subtitulo'>Línea 147: los reclamos más populares en junio</p>
+    <br>
     <div id = "chart_1"></div>
     <p class = 'cuerpo'>En comparación con el resto de las problemáticas, podemos ver que el
       estacionamiento en las calles bonaerenses aquiere protagonismo, lo que radica en una cantidad masiva de reclamos
