--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
     <br><br><br><br>
     <p class = 'subtitulo'>Conclusión</p>
     <br><br>
-    <p id = 'cuerpo_final'>*escribir final*</p>
+    <p id = 'cuerpo_final'>Se espera que el Gobierno de la Ciudad otorgue una respuesta para fines de esta semana, con el fin de 
+      cerrar la cuestión de una vez por todas. De no ser así, vecinos de varias comunas estarían organizando movilizaciones en 
+      todo CABA, con un posible bloqueo de los principales accesos a la Ciudad.
+    </p>
 
     <div class = 'box'>
       <br>
