--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <p class = 'subtitulo'>Barrios más afectados en junio</p>
     <p id = 'leyenda'>Cantidad de reclamos por autos mal estacionados</p>
     <div id = "chart_2"></div>
-    <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados, ya que como es de imaginarse, los
-      barrios más concurridos como lo son: <a class = 'cuerpo_negrita'>Palermo y Belgrano</a>, son los que revelaron
-      un mayor índice de reclamos a la línea de denuncias 147, en comparación al resto.
+    <p class = 'cuerpo'>El relevamiento no mostró resultados inesperados, ya que, como es de imaginarse, los
+      barrios más concurridos, como lo son: <a class = 'cuerpo_negrita'>Palermo y Belgrano</a>, son los que revelaron
+      un mayor índice de reclamos a la línea de denuncias 147 en comparación al resto.
     </p>
     <br>
     <p class = 'cuerpo'>Siguiendo el profundo análisis de la problemática, también se estudió 
@@ -94,7 +94,7 @@
     <p class = 'subtitulo'>Conclusión</p>
     <br><br>
     <p id = 'cuerpo_final'>Se espera que el Gobierno de la Ciudad otorgue una respuesta para fines de esta semana, con el fin de 
-      cerrar la cuestión de una vez por todas. De no ser así, vecinos de varias comunas estarían organizando movilizaciones en 
+      solucionar este problema de una vez por todas. De no ser así, vecinos de varias comunas estarían organizando movilizaciones en 
       todo CABA, con un posible bloqueo de los principales accesos a la Ciudad.
     </p>
 
