--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </p>
     
     <p class = 'cuerpo'>Ante la masiva cantidad de denuncias por vehículos mal estacionados, se realizó un relevamiento para estudiar
-      cuáles son los reclamos más recurrentes recibidos por la Línea 147, para así orientar las políticas públicas de manera óptima y eficiente, 
+      cuáles son los reclamos recibidos por la Línea 147 más recurrentes, para así orientar las políticas públicas de manera óptima y eficiente, 
       con el fin de mitigar el malestar de los ciudadanos.  </p>
     <br>
     <p class = 'subtitulo'>Línea 147: los reclamos más populares en junio</p>
