--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
 
-    <div class = "box">
+    <div class = "box_arriba">
       <p id="clima">⛅ 15.7º</id> 
       <p id="fecha">Martes, 25 de Julio de 2021</id> 
       <p id="nombre">The BA Times</id> 
@@ -98,7 +98,7 @@
       todo CABA, con un posible bloqueo de los principales accesos a la Ciudad.
     </p>
 
-    <div class = 'box'>
+    <div class = 'box_abajo'>
       <br>
       <p id="nombre_mini">The BA Times</id>
       <p class = 'abajo'>por Valentina Fuchs & Milagros Rodriguez Ventura</p> 
